modified:   backend/app/app.js 	modified:   backend/app/oggettiMappa.js 	renamed:    backend/app/oggetti.js -> backend/app/oggettiNonValidati.js 	modified:   backend/app/oggettiPubblicati.js 	modified:   backend/app/oggettiTrovati.js 	modified:   swagger.yaml Giorno: 10/06/2023
User Story:
Numero: 8
Nome: Visualizzazione degli oggetti sulla mappa
Task: Progettazione e implementazione DB
Commenti:
Verifica del funzionamento con Postman

User Story:
Numero: 19b
Nome: Pubblicazione degli oggetti nascosti
Task: Design API e Implementazione metodo REST + Progettazione e implementazione DB
Commenti:
Ridenominazione ed aggiustamenti sulle API
Verifica del funzionamento con Postman

User Story:
Numero: 19a
Nome: Visualizzazione degli oggetti nascosti (da validare)
Task: Design API e Implementazione metodo REST + Progettazione e implementazione DB
Commenti:
Inserimento API relativa al path GET /oggettiDaValidare  POST /oggettiDaValidare e
implementazione dei relativi metodi di routing
Verifi funzionamento con Postman
