# swagger.yaml
@@ -364,7 +364,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Oggetto'
+              $ref: '#/components/schemas/OggettoNonValidatoInserito'
         required: true
       responses:
         '201':
@@ -395,58 +395,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Oggetto'
-        '401':
-          description: Non autorizzato
-
-  /oggettiNonValidati/{ID}:
-    get:
-      tags:
-        - oggetto
-      parameters:
-        - name: ID
-          in: path
-          description: ID dell'oggetto da visualizzare
-          required: true
-          schema:
-            type: integer
-            format: int64
-      description: >-
-        Ottiene le informazioni di un oggetto non validato all'interno del sistema.
-      summary: Ottiene le informazioni di un oggetto non validato.
-      responses:
-        '200':
-          description: Operazione avvenuta con successo
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Oggetto'
-        '400':
-          description: ID dell'oggetto non valido
-        '401':
-          description: Non autorizzato
-    put:
-      tags:
-        - oggetto
-      description: >-
-        Modifica un oggetto non validato all'interno del sistema.
-      summary: Modifica un oggetto non validato.
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Oggetto'
-        required: true
-      responses:
-        '200':
-          description: Modifica avvenuta con successo
-        '400':
-          description: Modifica non avvenuta
-          content:
-            application/json:
-              schema:
-                type: string
-                description: Descrizione dell'errore che non ha permesso la modifica
+                  $ref: '#/components/schemas/OggettoNonValidatoRicevuto'
         '401':
           description: Non autorizzato
 
@@ -466,7 +415,7 @@ paths:
         '200':
           description: Il ritrovamento è stato inserito con successo
         '400':
-          description: 'Non è stato possibile validare il ritrovamento'
+          description: 'Non è stato possibile registrare il ritrovamento'
           content:
             application/json:
               schema:
@@ -475,6 +424,31 @@ paths:
         '401':
           description: Non autorizzato
 
+  /oggettiPubblicato:
+    post:
+      description: >-
+        Permette di pubblicare un oggetto all'interno del sistema, in particolare
+        tale oggetto diventerà disponibile all'interno della mappa.
+      summary: Pubblicare un oggetto all'interno del sistema.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OggettoPubblicato'
+        required: true
+      responses:
+        '200':
+          description: La pubblicazione dell'oggetto è stato effettuata con successo
+        '400':
+          description: 'Non è stato possibile pubblicare l'oggetto'
+          content:
+            application/json:
+              schema:
+                type: string
+                description: Descrizione dell'errore
+        '401':
+          description: Non autorizzato
+ 
   /commenti:
     post:
       description: >-
@@ -621,7 +595,7 @@ components:
           description: "La dimensione dell'oggetto"
         difficulty: 
           type: string
-          description: "La difficoltà dell'oggetto"    
+          description: "La difficoltà dell'oggetto" 
 
     OggettoMappa:
       type: object
@@ -636,7 +610,73 @@ components:
           type: string
           description: "La posizione dell'oggetto"
 
-    
+    OggettoNonValidatoInserito:
+      type: object
+      required:
+        - idGiocatore
+        - location
+        - title
+        - description
+        - dimension
+        - difficulty
+        - codiceDiValidazione
+      properties:
+        idGiocatore:
+          type: string
+          description: "Il giocatore che ha inserito l'oggetto"
+        location:
+          type: string
+          description: "La posizione dell'oggetto"
+        title:
+          type: string
+          description: "Il titolo dell'oggetto"
+        description: 
+          type: string
+          description: "La descrizione dell'oggetto"
+        dimension: 
+          type: string
+          description: "La dimensione dell'oggetto"
+        difficulty: 
+          type: string
+          description: "La difficoltà dell'oggetto"    
+        codiceDiValidazione: 
+          type: string
+          description: "Il codice di validazione per l'oggetto" 
+
+    OggettoNonValidatoRicevuto:
+      type: object
+      required:
+        - idOggetto
+        - idGiocatore
+        - location
+        - title
+        - description
+        - dimension
+        - difficulty
+        - codiceDiValidazione
+      properties:
+        idGiocatore:
+          type: string
+          description: "Il giocatore che ha inserito l'oggetto"
+        location:
+          type: string
+          description: "La posizione dell'oggetto"
+        title:
+          type: string
+          description: "Il titolo dell'oggetto"
+        description: 
+          type: string
+          description: "La descrizione dell'oggetto"
+        dimension: 
+          type: string
+          description: "La dimensione dell'oggetto"
+        difficulty: 
+          type: string
+          description: "La difficoltà dell'oggetto"    
+        codiceDiValidazione: 
+          type: string
+          description: "Il codice di validazione per l'oggetto" 
+
     OggettoTrovato:
       type: object
       required:
@@ -657,11 +697,11 @@ components:
     OggettoPubblicato:
       type: object
       required:
-      - oggetto
+      - idOggetto
       properties:
-        oggetto:
+        idOggetto:
           type: string
-          description: 'ID oggetto'
+          description: 'ID dell'oggetto da validare'
 
     Commento:
       type: object
